# where-do-llms-go-wrong

./: .gitignore  CITATION.bib  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE_TODO.md  MANIFEST.md  Makefile  README.md  pyproject.toml  requirements-analysis.txt  requirements-core.txt  requirements-vllm.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  integration_request.md  metric_request.md
.github/workflows/: smoke-test.yml
ai_reviewer_diagnostics/: __init__.py  __main__.py  report.py
ai_reviewer_diagnostics/examples/: __init__.py  system_outputs_baseline.jsonl  system_outputs_perturbed_soundness.jsonl
analysis/: README.md  acceptance_ratio_analysis.py  hyp_test_proportion_gap_print.py  hyp_test_simple_gap_V2.py  hyp_test_simple_gap_V2_print.py  hypothesis_tests_ordinal_decision.py  hypothesis_tests_ordinal_with_agreement.py  hypothesis_tests_proportional_decision.py
data/: README.md
docs/: DATA.md  GETTING_STARTED.md  INTEGRATIONS.md  REPRODUCIBILITY.md
examples/: README.md  example.json  openreview_comments_minimal.json
paper/: README.md
prompts/: README.md  base_prompt.jsonl  perturb_prompt.jsonl
prompts/original_prompts/: Meta Review Prompts_v1.docx  Meta Review Prompts_v2.docx  Perturb_Prompts.docx  base_prompt.jsonl  false_claim_perturb_v2.docx  oral_sample_rebuttal.docx  raw_rebuttal+reviews.docx  rebuttal_organize_sample.docx  rebuttal_organize_sample_V2.docx  rebuttal_organize_sample_V3.docx  spotlight_sample_rebuttal.docx
prompts/original_prompts/use/: False Claim Bucket.docx  False Claim Bucket_v2.docx  Meta Review Prompts_v4.docx  Perturb_Prompts_v4.docx  Review Prompts_v3.docx  false_claim_perturb_v2.docx  rebuttal_perturb_prompt_v1.docx
scripts/: README.md  chat_io.py  clean_openreview.py  generate_diagnostic_report.py  quickstart.py  run_gemini.py  run_openrouter.py  run_vllm.py  summarize_release_data.py
