[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-reviewer-diagnostic-release"
version = "0.1.0"
description = "Code, prompts, examples, and reproducibility notes for diagnosing automated peer review failures."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jiatao Li" },
]
dependencies = [
  "tqdm>=4.66,<5",
  "openai>=1.0,<3",
  "google-genai>=1.0,<2",
  "huggingface-hub>=0.23,<2",
]

[project.optional-dependencies]
analysis = [
  "pandas>=2.0,<3",
  "numpy>=1.24,<3",
  "matplotlib>=3.7,<4",
  "seaborn>=0.12,<1",
  "scipy>=1.10,<2",
  "statsmodels>=0.14,<1",
  "scikit-learn>=1.3,<2",
]
vllm = [
  "vllm>=0.6,<1",
  "transformers>=4.45,<5",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = []

[tool.uv]
package = false
