[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-reviewer-diagnostics"
version = "0.1.4"
description = "Diagnostic toolkit for black-box evaluation of automated peer-review systems."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Jiatao Li" },
]
keywords = [
  "automated peer review",
  "LLM evaluation",
  "diagnostic benchmark",
  "peer review",
  "perturbation analysis",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "tqdm>=4.66,<5",
  "openai>=1.0,<3",
  "google-genai>=1.0,<2",
  "huggingface-hub>=0.23,<2",
]

[project.urls]
Homepage = "https://github.com/PKU-ONELab/where-do-llms-go-wrong"
Paper = "https://doi.org/10.1145/3746252.3761274"
Dataset = "https://huggingface.co/datasets/PKU-ONELab/ai-reviewer-diagnostic-data"

[project.scripts]
ai-reviewer-diagnostics = "ai_reviewer_diagnostics.report:main"
ai-reviewer-report = "ai_reviewer_diagnostics.report:main"

[project.optional-dependencies]
analysis = [
  "pandas>=2.0,<3",
  "numpy>=1.24,<3",
  "matplotlib>=3.7,<4",
  "seaborn>=0.12,<1",
  "scipy>=1.10,<2",
  "statsmodels>=0.14,<1",
  "scikit-learn>=1.3,<2",
]
vllm = [
  "vllm>=0.6,<1",
  "transformers>=4.45,<5",
]

[tool.setuptools.packages.find]
include = ["ai_reviewer_diagnostics*"]

[tool.setuptools.package-data]
"ai_reviewer_diagnostics.examples" = ["*.jsonl"]
